--- a/src/pages/About_us.css
+++ b/src/pages/About_us.css
@@ -1,8 +1,14 @@
-/* section 1 */
-.section{
-  width: 1446px;
+
+.about-us-container {
+  display: flex;
+  flex-direction: column; 
+  padding: 7vh 9vh 0vh 9vh;
+  height: auto;  
+  width: 100%; 
 }
-.about-us-container .about-us-section h2 {
+
+.about-us-container .about-us-section h2 ,
+.about-us-section2 h2{
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
   font-size: 32px;
@@ -14,8 +20,16 @@
   flex-direction: row;
   display: flex;
   gap: 20px;
-  margin-bottom: 44%;
+  margin-bottom: 4%;
 }
+.left-part,
+.right-part {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+
 .right-part {
   margin-left: 51px;
 }
@@ -24,238 +38,82 @@
   flex: 1;
   box-sizing: border-box;
   display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
+}
+.left-part img,
+.right-part img {
+  border-radius: 8px;
+  max-width: 100%;
+  height: auto; 
+  flex-shrink: 0;
+}
+
+.left-part p{
+  max-width: 649px;
+  height: 160px;
+}
+.right-part p{
+  max-width: 605px;
+
 }
 
 .left-part p,
-.right-part p {
-  max-width: 649px;
+.right-part p,
+.about-us-section2 .parent p,
+.about-us-section2 .down-part p {
   color: var(--darkgraycolor);
   font-family: "Roboto", sans-serif;
   font-size: 24px;
-  font-style: normal;
   font-weight: 400;
   line-height: 110%;
 }
-.medi-text {
+
+
+.medi-text, .medi-text2, .medi-text3 {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 26px;
-  font-style: normal;
   font-weight: 900;
   line-height: 110%;
 }
-
-.right-part img {
-  margin-top: 60px;
-  border-radius: 8px;
-  max-width: 100%;
-  height: 381.967px;
-  flex-shrink: 0;
-}
-.left-part img {
-  border-radius: 8px;
-  max-width: 100%;
-  height: 381.967px;
-  flex-shrink: 0;
-  width: 500px;
-  height: 500px;
-  flex-shrink: 0;
-}
-@media (max-width: 1400px) {
-  .about-us-section {
-    flex-direction: row;
-    margin-left: 50px;
-  }
-  .left-part p,
-  .right-part p {
-    max-width: 500px;
-  }
-}
-@media (max-width: 1140px) {
-  .left-part img,
-  .right-part img {
-    width: 100%;
-    max-width: none;
-    height: auto;
-  }
-}
-@media (max-width: 1135px) {
-  .right-part {
-    margin-left: 0;
-  }
-  .left-part img,
-  .right-part img {
-    width: 90%;
-    max-width: none;
-    height: auto;
-  }
-
-  .left-part p,
-  .right-part p {
-    width: 100%;
-  }
-}
-@media (max-width: 1000px) {
-  .about-us-section {
-    margin-bottom: -45%;
-  }
-}
-@media (max-width: 600px) {
-  .right-part img {
-    margin-top: -27cm;
-  }
-  .right-part h2 {
-    margin-top: 20cm;
-  }
-  .left-part h2 {
-    margin-top: 7cm;
-  }
-  .left-part img{
-    margin-top: 0cm;
-  }
-  .about-us-section {
-    flex-direction: column;
-  }
-  .right-part {
-    margin-left: 0;
-  }
-  .about-us-section {
-    margin-bottom: 23cm;
-    margin-left: -8px;
-  }
-  .left-part,
-  .right-part {
-    flex: 100%;
-    align-items: center;
-    text-align: center;
-    gap: 30px;
-  }
-
-  .left-part img,
-  .right-part img {
-    width: 70%;
-    max-width: none;
-    height: auto;
-  }
-
-  .left-part p,
-  .right-part p {
-    width: 90%;
-
-  }
-}
-@media (max-width: 515px) {
-  .right-part img {
-    margin-top: -27cm;
-  }
-  .right-part h2 {
-    margin-top: 20cm;
-  }
-  .left-part h2 {
-    margin-top: 7cm;
-  }
-  .left-part img{
-    margin-top: 1cm;
-  }
-  .about-us-section {
-    flex-direction: column;
-  }
-  .right-part {
-    margin-left: 0;
-  }
-  .about-us-section {
-    margin-bottom: 23cm;
-    margin-left: -8px;
-  }
-  .left-part,
-  .right-part {
-    flex: 100%;
-    align-items: center;
-    text-align: center;
-    gap: 30px;
-  }
-
-  .left-part img,
-  .right-part img {
-    width: 70%;
-    max-width: none;
-    height: auto;
-  }
-
-  .left-part p,
-  .right-part p {
-    width: 90%;
-
-  }
-}
-@media (max-width: 475px) {
-  .right-part img {
-    margin-top: -27cm;
-  }
-  .right-part h2 {
-    margin-top: 20cm;
-  }
-  .left-part h2 {
-    margin-top: 7cm;
-  }
-  .left-part img{
-    margin-top: 2cm;
-  }
-  .about-us-section {
-    flex-direction: column;
-  }
+.medi-text {
+  font-size: 26px;
 }
 
-/* section 2 */
-
-.about-us-section2{
-  /* max-width: 1276px; */
-  margin-bottom: 25cm;
+.medi-text2 {
+  font-size: 24px;
 }
-.about-us-section2 h2{
-  color: var(--graycolor);
-  font-family: 'Roboto' ,sans-serif;
-  font-size: 32px;
-  font-style: normal;
+
+.medi-text3 {
+  font-size: 22px;
   font-weight: 700;
-  line-height: 110%; /* 35.2px */
-  margin-bottom: 20px;
+}
+
+.about-us-section2 .parent{
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  margin-bottom: 4%;
+}
+.about-us-section2 .parent p{
+  max-width: 1276px;
 }
 .about-us-section2 .parent hr{
   margin: 20px;
   border: 1px solid transparent;
 }
-.about-us-section2 .parent p{
-  color: var(--darkgraycolor);
-  font-family: 'Roboto',sans-serif;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 110%;
-  margin-bottom: 70px;
-  max-width: 1276px;
-}
+
 .about-us-section2 .down-part{
   flex-direction: row;
   display: flex;
-  margin-bottom: 44%;
+}
+.about-us-section2 .down-part h2{
+  margin-bottom: 4%;
 }
 .about-us-section2 .down-part p{
-  color: var(--darkgraycolor);
-  font-family: 'Roboto',sans-serif;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 110%;
   margin-bottom: 65px;
   max-width: 647px;
 }
-.about-us-section2 .down-part img{
-  margin-top: -20px;
-}
+
 .about-us-section2 .down-part .dparag{
   max-width:814px;
   font-family: 'Roboto',sans-serif;
@@ -264,112 +122,84 @@
   font-weight: 700;
   line-height: 110%; 
 }
-.medi-text2 {
-  color: var(--Red);
-  font-family: "Roboto", sans-serif;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 110%;
+.about-us-section3{
+  margin-bottom: 4%;
 }
-.medi-text3 {
+.about-us-section3 .title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%; 
+  margin-top: 20px; 
+  margin-bottom: 20px;
+}
+.about-us-section3 .title img{
+  margin-right: 10px; 
+}
+.about-us-section3 .title h3{
   color: var(--Red);
-  font-family: "Roboto", sans-serif;
-  font-size: 22px;
+  font-family: 'Roboto',sans-serif;
+  font-size: 32px;
   font-style: normal;
   font-weight: 700;
+  line-height: 110%; 
+}
+.Ourfeatures-wrapper {
+  display: flex;
+  align-items: center;
+  /* overflow: hidden; */
+}
+
+
+.Ourfeatures{
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  align-items: flex-start;
+  gap: 40px;
+  /* display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; */
+}
+
+.scroll-left, .scroll-right { 
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  /* top: 50%; */
+  transform: translateY(-50%);
+  width: 54.515px;
+  height: 108.355px;
+  flex-shrink: 0;
+}
+
+.scroll-left {
+  left: 0;
+}
+
+.scroll-right {
+  right: 0;
+}
+
+.Ourfeatures .feature{
+  flex-wrap: wrap;
+  width: 374px;
+  height: 359px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  border: 1px solid var(--Red);
+  background: linear-gradient(90deg, rgba(190, 2, 2, 0.51) 0%, rgba(190, 2, 2, 0.51) 100%);
+}
+.about-us-section3 .Ourfeatures .feature p{
+  color: var(--whiteColor);
+  font-family: 'Roboto',sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
   line-height: 110%;
+  padding: 3vh;
 }
-@media (max-width: 1400px) {
-  .about-us-section{
-    margin-bottom: 20cm;
-    margin-left: 30px;
-  }
-  .about-us-section2{
-    margin-left: 30px;
-  }
-  .about-us-section2{
-    max-width: 95%;
-  }
-}
-@media (max-width: 1000px) {
-  .about-us-section{
-    margin-bottom: 5cm;
-    margin-left: 30px;
-  }
-  .about-us-section2{
-    margin-bottom: -3cm;
-    margin-left: 30px;
-  }
-  .about-us-section2{
-    max-width: 93%;
-  }
-}
-@media (max-width: 880px) {
-  .about-us-section2{
-    margin-bottom: -1cm;
-    margin-left: 30px;
-  }
-  .about-us-section2 .down-part img{
-    height: 550px;
-    width: 400px;
-  }
-}
-@media (max-width: 825px) {
-  .about-us-section2{
-    margin-bottom: 1cm;
-    margin-left: 30px;
-  }
-  .about-us-section2 .parent p,
-  .about-us-section2 .down-part p {
-    font-size: 20px; 
-  }
-  .about-us-section2 .parent h2,
-  .about-us-section2 .down-part h2 {
-    font-size: 30px; 
-  }
-  .about-us-section2 .down-part{
-    flex-direction: column;
-  }
-  
-  .about-us-section2{
-    margin-bottom: 25cm;
-  }
-  .about-us-section2{
-    max-width: 92%;
-  }
-}
-
-@media (max-width: 620px) {
-  .about-us-section2 .parent p,
-  .about-us-section2 .down-part p {
-    font-size: 18px; 
-  }
-  .about-us-section2 .down-part img{
-    margin-left: 30px;
-  }
-}
-@media (max-width: 600px) {
-  .about-us-section{
-    margin-bottom: 20cm;
-  }
-  .about-us-section2{
-    max-width: 90%;
-  }
-  .about-us-section2{
-    align-items: center;
-    text-align: center;
-  }
-}
-@media (max-width: 500px) {
-  .about-us-section2{
-    margin-bottom: 27cm;
-  }
-
-}
-
-/* section 3 */
-
 .about-us-hr{
   /* width: 1446px; */
   /* height: 0px; */
@@ -380,3 +210,47 @@
 }
 
 
+
+
+/* @media (max-width: 1400px) {
+  .about-us-section,
+  .about-us-section2 {
+    margin-left: 30px;
+  }
+
+  .left-part p,
+  .right-part p {
+    max-width: 500px;
+  }
+}
+@media (max-width: 1000px) {
+  .about-us-section {
+    margin-bottom: 5cm;
+    margin-left: 30px;
+  }
+
+  .about-us-section2 {
+    max-width: 93%;
+    margin-bottom: 5cm;
+    margin-left: 30px;
+  }
+}
+
+@media (max-width: 600px) {
+  .about-us-section,
+  .about-us-section2 {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .left-part img,
+  .right-part img {
+    width: 70%;
+  }
+
+  .left-part p,
+  .right-part p {
+    width: 90%;
+  }
+} */
