--- a/src/pages/chat.css
+++ b/src/pages/chat.css
@@ -1,20 +1,23 @@
 .chatting {
   display: flex;
   height: 100vh;
-  padding: 2.5rem;
+  padding: 2rem;
   gap: 1.25em;
+}
+.chatting span {
+  animation: none;
 }
 .chatting .sidebarchat {
   display: flex;
   flex-direction: column;
   flex: 2;
-  gap: 2.5rem;
+  gap: 1.5rem;
 }
 .chatting .sidebarchat .sidebar {
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 .chatting .sidebarchat .sidebar::-webkit-scrollbar {
   display: none;
@@ -100,11 +103,6 @@
 .chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .lastMessage {
   font-size: 0.9375rem;
 }
-.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .mess {
-  display: flex;
-  flex-direction: column;
-  gap: 2.5rem;
-}
 .chatting
   .sidebarchat
   .sidebar
@@ -112,6 +110,7 @@
   .slide
   .doctorInfo
   .unreadMessages {
+  text-align: center;
   width: 24px;
   height: 24px;
   background-color: var(--Red);
@@ -121,32 +120,61 @@
   font-size: 12px;
   font-family: "Inter", sans-serif;
   font-weight: 500;
-  text-align: center;
   line-height: 24px;
 }
+.chatting .sidebarchat .sidebar .doctorschat .slide .doctorInfo .mess {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
 .chatting .sidebarchat .sidebar .doctorschat .slide .onlineIndicator {
+  position: absolute;
   width: 0.625rem;
   height: 0.625rem;
   background-color: #66ca98;
   border-radius: 50%;
   border: 1px solid white;
-  position: absolute;
   right: 0.1em;
   bottom: 0.1em;
-  z-index: 2;
   transform: translate(50%, 50%);
+  z-index: 2;
 }
-.chatm {
-  position: relative;
+
+.conversation {
+  display: flex;
   flex: 3;
+  background-color: #fff;
+  height: 100%;
+  display: none;
+}
+.conversation.active {
   display: flex;
   flex-direction: column;
+}
+.conversation-default {
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  color: #778899;
+}
+.conversation-default i {
+  font-size: 32px;
+}
+.conversation-default p {
+  margin-top: 16px;
+}
+
+.chatm {
+  position: relative;
+  display: flex;
   gap: 2rem;
+  flex: 3;
+  flex-direction: column;
 }
 .chatm .doctorinfor {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  gap: clamp(1rem, calc(1vw + 3vw), 2rem);
 }
 .chatm .doctorinfor .infor {
   display: flex;
@@ -157,7 +185,7 @@
 .chatm .doctorinfor .infor h3 {
   color: #2e2e2e;
   font-family: "Roboto", sans-serif;
-  font-size: 1.5rem;
+  font-size: clamp(1rem, calc(1vw + 3vw), 1.8rem);
   font-style: normal;
   font-weight: 600;
   line-height: 0.75rem;
@@ -165,7 +193,7 @@
 .chatm .doctorinfor .infor p {
   color: #2e2e2e;
   font-family: "Roboto", sans-serif;
-  font-size: 1.375rem;
+  font-size: clamp(1rem, calc(1vw + 3vw), 1.5rem);
   font-style: normal;
   font-weight: 400;
   line-height: 0.75rem;
@@ -175,40 +203,35 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 6rem;
-  height: 6rem;
+
 }
 .chatm .imgd {
-  width: 100%;
-  height: 100%;
   position: relative;
   overflow: hidden;
-  border-radius: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width:4.5rem;
+  height: 4.5rem;
+   border-radius: 50%;
 }
-.chatm .doctorinfor .contactimgchat .onlineIndicator{
-  width: 1.25rem;
-  height: 1.12875rem;
+.chatm .imgd img{
+   position: absolute;
+   object-fit: cover;
+   object-position: top right; 
+   top: 0;
+   left: 0;
+   width: 300%; 
+   height: 260%; 
+   transform: translate(-45%, -15% )scale(1);
+}
+.chatm .doctorinfor .contactimgchat .onlineIndicator {
+  width: clamp(0.9rem, calc(1vw + 3vw), 1rem);
+  height: clamp(0.9rem, calc(1vw + 3vw), 1rem);
   background-color: #66ca98;
   border-radius: 50%;
   border: 1px solid white;
   position: absolute;
-  right: 0.9em;
-  bottom: 0.8em;
+  right:0.4em;
+  bottom: -0.1em;
   z-index: 2;
-  transform: translate(50%, 50%);
-}
-.chatm .zoomedImagechat {
-  border-radius: 100%;
-  object-fit: cover;
-  object-position: -34px center;
-  width: auto;
-  height: auto;
-  height: 450%;
-  transform: translateY(31%);
-  z-index: 1;
 }
 .chatm .chat-container {
   width: 100%;
@@ -249,13 +272,13 @@
 .chatm .chat-messages .message.doctor {
   padding: 1rem;
   color: #1f1f1f;
-  font-family: 'Montserrat',sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   border-radius: 0rem 1.25rem 1.25rem 1.25rem;
-  background: #F2F7FB;
+  background: #f2f7fb;
   word-wrap: break-word;
   word-break: break-word;
   white-space: pre-wrap;
@@ -264,9 +287,8 @@
 }
 
 .input-area {
-  padding: 0em 1.5em;
   display: flex;
-  gap: 1.25rem;
+  gap: 0.5rem;
 }
 .input-area .input-container {
   position: relative;
@@ -274,43 +296,57 @@
 }
 .input-area .input-container .input-icon {
   position: absolute;
-  left: 0.5em;
-  top: 0;
+  height: 100%;
+  top: -0.3em;
   bottom: 0;
   display: flex;
   align-items: center;
   height: 100%;
   cursor: pointer;
 }
+.input-area .input-container .input-icon svg {
+  width: 4vw;
+  height: 4vh;
+}
 .input-area .input-container .textarea-custom {
   width: 100%;
-  height: 100%;
+  height: 5.5vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 1.25rem;
+  border-radius:0.5rem;
   border: 1px solid var(--Red);
   background: #fff;
   box-sizing: border-box;
-  overflow-y: auto; 
+  overflow-y: auto;
   scrollbar-width: none;
-  padding: 1rem 2.5rem;
+  padding: 0rem 2.5rem;
 }
-.input-area .input-container:hover {
+.input-area svg {
+  min-width: 30px; 
+  width: 4vw; 
+  height: 6vh;
+}
+.input-area .input-container svg:hover {
   opacity: 0.7;
 }
 .input-area .input-container .textarea:focus {
-  outline: none; 
+  outline: none;
   border: 1px solid transparent;
 }
+.input-area .input-container .textarea::placeholder {
+  font-size: 70%; 
+}
+
 .input-area .input-container .textarea {
   width: 100%;
   height: 100%;
-  padding-top: 1rem;
+  justify-content: center;
+  padding-top: 0.7rem;
   box-sizing: border-box;
   border: none;
   resize: none;
-  overflow-y: auto; 
+  overflow-y: auto;
   scrollbar-width: none;
 }
 .textarea-custom::-webkit-scrollbar {
@@ -327,56 +363,58 @@
 
 .emoji-picker-position {
   position: relative;
-  display: flex; 
+  display: flex;
 }
 .emoji-picker-container {
   position: absolute;
   width: 10vw;
-  max-height: 20vh; 
-  bottom: 90%; 
+  max-height: 20vh;
+  bottom: 90%;
   left: 50%;
-  transform: translateX(-50%) translateY(10em); 
+  transform: translateX(-50%) translateY(10em);
   transition: transform 0.5s ease, visibility 0.5s ease;
   z-index: 5;
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 1em;
   padding: 5px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   overflow-y: auto;
-  visibility: hidden; 
+  visibility: hidden;
   opacity: 0;
 }
 .emoji-picker-container.show {
-  transform: translateX(-50%) translateY(0); 
-  visibility: visible; 
+  transform: translateX(-50%) translateY(0);
+  visibility: visible;
   opacity: 1;
 }
 .emoji-picker-container::-webkit-scrollbar {
   display: none;
 }
 
-
-
-
-.sidebar-toggle {
+.chatm .fa-solid.fa-arrow-left {
+  color: var(--Red); 
   display: none;
-  position: fixed;
-  left: 1rem;
-  top: 10rem;
-  background: none;
-  border: none;
-  z-index: 1;
 }
 
-@media (max-width: 1000px) {
-  .chatting .sidebarchat{
+
+/*Res*/
+@media screen and (max-width: 800px) {
+  .chatting .sidebarchat {
     display: none;
   }
   .chatm {
     width: 100%;
   }
-  .sidebar-toggle {
-    display: block;
+  .chatm .fa-solid.fa-arrow-left {
+    display: flex;
+  }
+  .conversation.active {
+    position: relative;
+    z-index: 20;
+  }
+  .conversation-default.active {
+    display: none;
+    padding: 16px;
   }
 }
